internal/compiler/testdata/fuzz/crashers/25535b11aea6885a9d7580ff1abc785f40b41f43.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x53b6b2]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0x0, 0x5a1bc0, 0xc0000102f0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000aa580, 0xc000014398, 0x30, 0x38, 0xc000024e00)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a8
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000aab00, 0xc00004ef88, 0x411143, 0xc000024e80, 0xc00004f008)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ab080, 0x0, 0x2, 0xc0000143a0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ab600, 0x5a2820, 0xc000024e80, 0x1, 0x5a2820)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000abb80, 0x11, 0x1, 0x99, 0x5a2820)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ac2c0, 0xc000024c00, 0xc0000ac840, 0xc00004f508, 0x505426)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ac840, 0x506820, 0xc0000102e0, 0xc0000abb80, 0x5a2b20)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000acdc0, 0x5a2b20, 0xc00006c180, 0xc0000ad8c0, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ad340, 0x1, 0x5a2820, 0x5a2820, 0xc000024a00)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000ad8c0, 0x5788c0, 0x5a2820, 0xc000024900, 0xc00004faf0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c260, 0xc00005e1e0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x15, 0xc00004fb40)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x223
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c260, 0xc0000a8000, 0x40b616, 0xc000024f00, 0x40, 0x38)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c260, 0xc0000a8000, 0x0, 0xc00004fc60, 0x411143, 0xc000024f00)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x127
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c260, 0xc0000a6000, 0x0, 0x2, 0xc0000143ab, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c260, 0xc0000a4000, 0x0, 0x2, 0xc0000143ab, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c260, 0xc0000a4000, 0x0, 0x0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x7fc1c3f40000, 0x14, 0x14, 0x4)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00004ff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2